[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/main_art.png" type="Texture" id=1]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 444.0
margin_top = 103.0
margin_right = 1056.0
margin_bottom = 775.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 672.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 2.35
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 659.204
margin_top = 781.122
margin_right = 814.204
margin_bottom = 848.122
custom_fonts/font = SubResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1148.0
margin_top = 741.0
margin_right = 1503.0
margin_bottom = 896.0
color = Color( 0, 0, 0, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1147.0
margin_top = 765.0
margin_right = 1499.0
margin_bottom = 877.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 352.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Created by:"
align = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 352.0
margin_bottom = 62.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.678431, 0.862745, 1 )
text = "@OrigamiDStudio"
align = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 352.0
margin_bottom = 94.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.678431, 0.862745, 1 )
text = "@SanderVhove"
align = 1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="VBoxContainer/Label3" to="." method="_on_Label3_gui_input"]
[connection signal="gui_input" from="VBoxContainer/Label4" to="." method="_on_Label4_gui_input"]
